[gd_scene load_steps=2 format=3 uid="uid://bwk4ath0ei7ax"]

[ext_resource type="Script" uid="uid://ckfuboxgcdu1x" path="res://GameScene.gd" id="1_mlf6e"]

[node name="GameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mlf6e")

[node name="UI_Layer" type="CanvasLayer" parent="."]

[node name="MainUIContainer" type="Control" parent="UI_Layer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBarContainer" type="HBoxContainer" parent="UI_Layer/MainUIContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="PlayerHealthBar" type="ProgressBar" parent="UI_Layer/MainUIContainer/HealthBarContainer"]
modulate = Color(0.141176, 1, 0.219608, 1)
custom_minimum_size = Vector2(200, 27)
layout_mode = 2
size_flags_vertical = 1
value = 100.0
show_percentage = false

[node name="Spacer" type="Control" parent="UI_Layer/MainUIContainer/HealthBarContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyHealthBar" type="ProgressBar" parent="UI_Layer/MainUIContainer/HealthBarContainer"]
modulate = Color(0.890196, 0.14902, 0.160784, 1)
custom_minimum_size = Vector2(200, 27)
layout_mode = 2
size_flags_vertical = 1
value = 100.0
fill_mode = 1
show_percentage = false

[node name="MessageLabel" type="Label" parent="UI_Layer/MainUIContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.345098, 0.72549, 0.717647, 1)
theme_override_font_sizes/font_size = 20
text = "Game Message"

[node name="MarbleContainer" type="HBoxContainer" parent="UI_Layer/MainUIContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="UI_Layer/MainUIContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Confirm Selection"
