[gd_scene load_steps=10 format=3 uid="uid://bwk4ath0ei7ax"]

[ext_resource type="Script" uid="uid://ckfuboxgcdu1x" path="res://scripts/GameScene.gd" id="1_mlf6e"]
[ext_resource type="PackedScene" uid="uid://bo5twrprw2cma" path="res://scenes/bag.tscn" id="2_onqr8"]
[ext_resource type="Texture2D" uid="uid://dvldwwbyju003" path="res://images/bg.png" id="2_y3j0m"]
[ext_resource type="Texture2D" uid="uid://dq0srq7ekvbil" path="res://images/stunned.png" id="3_utbpp"]
[ext_resource type="PackedScene" uid="uid://d2atoeymmwgmc" path="res://scenes/shop.tscn" id="3_ycayy"]
[ext_resource type="FontFile" uid="uid://c82d4iiiyqgqc" path="res://Philosopher-Regular.ttf" id="4_kk2rg"]
[ext_resource type="Texture2D" uid="uid://c2lby63veavjx" path="res://images/coin.png" id="4_mw25s"]
[ext_resource type="Texture2D" uid="uid://cthtkvk6httgc" path="res://images/bag.png" id="4_rurhu"]
[ext_resource type="Texture2D" uid="uid://dxfbqclwtkvum" path="res://images/enemy2.png" id="5_utbpp"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mlf6e")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -141.0
offset_right = 189.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y3j0m")
expand_mode = 1
stretch_mode = 4

[node name="Stunned" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 645.0
offset_top = 72.0
offset_right = 743.0
offset_bottom = 197.0
texture = ExtResource("3_utbpp")
expand_mode = 1
stretch_mode = 4

[node name="coin" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 328.0
offset_right = 102.0
offset_bottom = 395.0
texture = ExtResource("4_mw25s")
expand_mode = 1
stretch_mode = 4

[node name="coins" type="Label" parent="."]
layout_mode = 0
offset_left = 117.0
offset_top = 355.0
offset_right = 147.0
offset_bottom = 389.0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="Enemy" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 426.0
offset_top = 70.0
offset_right = 732.0
offset_bottom = 377.0
texture = ExtResource("5_utbpp")
expand_mode = 1
stretch_mode = 4

[node name="PlayerHealthBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(200, 27)
layout_mode = 2
offset_left = 31.0
offset_top = 411.0
offset_right = 280.0
offset_bottom = 438.0
size_flags_vertical = 1
value = 100.0
show_percentage = false

[node name="EnemyHealthBar" type="ProgressBar" parent="."]
modulate = Color(0.890196, 0, 0, 1)
custom_minimum_size = Vector2(200, 27)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -171.5
offset_top = 21.0
offset_right = 155.5
offset_bottom = 48.0
grow_horizontal = 2
size_flags_vertical = 1
value = 100.0
fill_mode = 1
show_percentage = false

[node name="MessageLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = 294.0
offset_right = 75.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.345098, 0.72549, 0.717647, 1)
theme_override_fonts/font = ExtResource("4_kk2rg")
theme_override_font_sizes/font_size = 20
text = "Game Message"
horizontal_alignment = 1

[node name="MarbleContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = 92.0
offset_right = 250.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ConfirmButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -63.0
offset_right = 73.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
text = "Confirm Selection"

[node name="BagBtn" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 452.0
offset_right = 244.0
offset_bottom = 629.0
texture_normal = ExtResource("4_rurhu")
ignore_texture_size = true
stretch_mode = 4

[node name="BGBeta" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.913725, 0.878431, 0.294118, 0.286275)

[node name="BGAlpha" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.54902)

[node name="RoundWonPopup" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -175.0
offset_right = 250.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="RoundWonPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.290196, 0.443137, 1)

[node name="ColorRect2" type="ColorRect" parent="RoundWonPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 83.0
offset_top = 41.0
offset_right = -87.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.545098, 0.4, 0.533333, 1)

[node name="Label" type="Label" parent="RoundWonPopup"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 35.0
offset_bottom = 148.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.905882, 0.745098, 0.909804, 1)
theme_override_font_sizes/font_size = 40
text = "Round won!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="RoundWonPopup"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 121.0
offset_top = -94.0
offset_right = -125.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 0
text = "Next round"

[node name="Shop" type="Button" parent="RoundWonPopup"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 121.0
offset_top = -136.0
offset_right = -125.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 0
text = "Shop"

[node name="RoundLostPopup" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -175.0
offset_right = 250.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="RoundLostPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.423529, 0.298039, 0.462745, 1)

[node name="Label" type="Label" parent="RoundLostPopup"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 113.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Round lost!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="RoundLostPopup"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 82.0
offset_top = -106.0
offset_right = -78.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart round"

[node name="Button2" type="Button" parent="RoundLostPopup"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 82.0
offset_top = -57.0
offset_right = -78.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart game"

[node name="Bag" parent="." instance=ExtResource("2_onqr8")]
visible = false
layout_mode = 1

[node name="Shop" parent="." instance=ExtResource("3_ycayy")]
visible = false
layout_mode = 1

[connection signal="pressed" from="BagBtn" to="." method="_on_bag_btn_pressed"]
[connection signal="pressed" from="RoundWonPopup/Button" to="." method="_on_round_won_pressed"]
[connection signal="pressed" from="RoundWonPopup/Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="RoundLostPopup/Button" to="." method="_on_round_lost_game_pressed"]
[connection signal="pressed" from="RoundLostPopup/Button2" to="." method="_on_reset_game_pressed"]
